--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-	"manifest_version": 2,
-	"name": "nVampeta",
-	"version": "1.4",
-	"description": "Troque todas as imagens do site por fotos do Vampeta.",
+	"manifest_version": 1,
+	"name": "nPaytrack",
+	"version": "1",
+	"description": "Troque todas as imagens do site por fotos de paytrackers.",
 	"icons": {
     	"48": "icon48.png",
         "128": "icon128.png"
@@ -10,7 +10,7 @@
 	"content_scripts": [
 	    {
 	      "matches": ["*://*/*"],
-	      "js": ["jquery.js", "nVampeta.js"]
+	      "js": ["jquery.js", "nPaytrack.js"]
 	    }
   	]
 }
